Minor logo alignment fix at small sizes; fixed footer display on home page at small sizes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -52,6 +52,7 @@
 	}
 	
 	/* Header */
+	#header h1.span4 { margin-left: 0; }
 	#header .span8 { width: 100%; margin-top: -15px; }
 	#header-menu { margin-left: 0 !important; width: 100%; }
 	
@@ -59,7 +60,7 @@
 	#front-page #post-content { top: 300px !important; }
 	
 	/* Footer */
-	#front-page #footer { display: none; }
+	.front-page #footer { display: none; }
 	.footer-widget-1, .footer-widget-2, .footer-widget-3 { margin-bottom: 20px !important; }
 
 }
